# scaffold

./: .gitignore  pyproject.toml
MODULENAME/: __main__.py  auth.py  database.py  globals.py  models.py
