[tool.poetry]
# TODO: Set the appropriate metadata!
name = "module"
version = "0.1.0"
description = ""
authors = ["Stefano Pigozzi <me@steffo.eu>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
fastapi-cloudauth = "^0.3.0"
SQLAlchemy = "^1.4.0b3"
psycopg2 = "^2.8.6"
uvicorn = "^0.13.4"
royalnet = "^6.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
